Implement production-ready QUIC, IPFS, and CouchDB protocols
Major implementation covering:

QUIC Protocol:
- Full packet structure with proper headers and framing
- Connection ID management and state tracking
- Stream multiplexing with flow control
- 0-RTT support and transport parameters
- Network byte order encoding
- Proper QUIC Initial packet construction (1200 byte minimum)

IPFS Implementation:
- Content addressing with CID and Multihash
- DHT/Kademlia routing table
- Peer discovery and block exchange
- Bitswap protocol support
- Pure Kotlin implementation using only kotlinx-serialization

CouchDB Integration:
- Full REST API client implementation
- Document CRUD operations
- View queries and design documents
- Replication protocol support
- Changes feed with sequence tracking

Production Infrastructure:
- C10K server supporting 10,000+ concurrent connections
- K2Script servlet container for dynamic content
- RTS network host with deterministic simulation
- Distributed storage with gossip protocol
- Main DSL router providing unified access to all components

All implementations use TrikeShed types (Indexed<T>, Join<A,B>) exclusively
with zero external dependencies beyond kotlinx-serialization as required.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>